# MoL25

./: .gitmodules  CMakeLists.txt  README.md  build.sh  clear.sh  run.sh
engine/code/include/MOL/Application/: camera.cpp  camera.hpp  core.cpp  core.hpp
engine/code/include/MOL/Gfx/: object.hpp  renderer.cpp  renderer.hpp
engine/code/include/MOL/Utils/: singleton.hpp
engine/code/shaders/: light_default.frag  light_default.vert  object_default.frag  object_default.vert
engine/code/src/: engine.cpp
engine/libs/: molson.h
engine/src/include/MOL/Application/: core.cpp  core.hpp
engine/src/include/MOL/Gfx/: renderer.hpp
engine/src/include/MOL/Gfx/Objects/: objects.hpp
engine/src/shaders/: object_default.frag  object_default.vert
engine/src/src/: engine.c  engine.cpp
